Stop card overlap quick fix

--- a/assets/css/_scss/cards.scss
+++ b/assets/css/_scss/cards.scss
@@ -1,4 +1,3 @@
-
 .card {
     background: $pumpkin;
 
@@ -7,6 +6,8 @@
     display: flex;
     border-radius:0px;
     display: -ms-flexbox;
+    width: 100%;
+    min-width: 100px;
     -ms-flex-direction: column;
     flex-direction: column;
     .card-body, .card-footer, .card-header {
